Add --enable-native-access=javafx.graphics